src/objects/Value_Chain__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>CCV__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCV__c</fullName>
        <label>CCV</label>
        <referenceTo>CCV__c</referenceTo>
        <relationshipLabel>Value Chain</relationshipLabel>
        <relationshipName>Value_Chain</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <label>Challenges</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <label>Wider Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Assigned__c</fullName>
        <formula>ISBLANK(CCV__r.Opportunity__c) = FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposals__c</fullName>
        <label>Intel Value Proposal</label>
        <type>TextArea</type>
    </fields>
    <label>Value Chain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CCV__c</columns>
        <columns>Function__c</columns>
        <columns>KPI__c</columns>
        <columns>Challenges__c</columns>
        <columns>Goals__c</columns>
        <columns>Proposals__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Value Chain Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Chain</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>